# vts-dci

./: .gitignore  MANIFEST.in  README.md  bootstrap-example.conf  requirements.txt  setup.cfg  tox.ini
ansible/: osp-director.yml
ansible/roles/osp-director/tasks/: main.yml
artifacts/: bxb_osp.conf  bxb_osp_ironic.conf  vts_osp.conf
jumpbox/dci-ansible-agent/: settings.yml
jumpbox/dci-ansible-agent/hooks/: pre-run.yml  running.yml
osp7_installer/: bootstrap.py  bootstrap_steps.py  config.py
osp7_installer/ansible/: asr-deploy.yml  jenkins.yml  osp-director.yml  overcloud-deploy.yml  overcloud-redeploy.yml  rally-scale.yml  run_tests_by_regex.yml  test-cloud.yml  undercloud.yml
osp7_installer/conf_common/: base.conf  bxb.conf  osp10.conf  osp11.conf  osp7.conf  osp8.conf  sj.conf
osp7_installer/steps/: __init__.py  ansible_step.py  cobbler_os_install.py  example.py  ncclient_snippets.py  switch_conf_step.py
osp_bootstrap_cobbler/: bootstrap.py  bootstrap_steps.py  config.py
osp_bootstrap_cobbler/conf_common/: base.conf  bxb.conf  sj.conf
osp_bootstrap_cobbler/steps/: __init__.py  ansible_step.py  cobbler_os_install.py  step.py
osp_installer/: bootstrap.py  bootstrap_steps.py  config.py  test.py
osp_installer/ansible/: osp-director.yml  overcloud-delete.yml  overcloud-redeploy.yml  rhel-unregister.yml  run_tests_by_regex.yml  test-cloud.yml  update_overcloud_image.yml
osp_installer/conf_common/: base.conf  osp10.conf  sj.conf
osp_installer/steps/: ansible_step.py  cobbler_os_install.py  ncclient_snippets.py  switch_conf_step.py
(+112 files in other folders)
