[metadata]
name = osp7_installer
version = 0.0.1
summary = OSP7 Installer
description-file =
    README.md
author = bdemers
author-email = bdemers@apache.org

classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.9

[files]
packages =
    osp7_installer


[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    osp7_bootstrap = osp7_installer.bootstrap:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
